@@ -17,6 +17,7 @@ Features:
 -checksum verification for Metalink downloads (support for md2, md4, md5, sha1, sha224, sha256, sha384, sha512).
 -chunk checksum verification for Metalink downloads (support for md2, md4, md5, sha1, sha224, sha256, sha384, sha512).
 -several Metalink options (location, OS, language, preference, max connections per resource, max connections per file, continent of origin).
+-options to print full lists of valid countries and continents for Metalink files.
 -resume Metalink download.
 -read Metalink URLs from a text file.
 -option to follow Metalink URLs in HTML pages.
